# kvs_store

./: .gitignore  Cargo.toml  engine  kv_store.md  kvs_store.md  log  telemetry-id
benches/: benches.rs  common.rs  index.html
sled/: db
src/: client.rs  kvs.rs  lib.rs  main.rs  prac.rs  server.rs  sled_engine.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: tests.rs  thread_pool.rs
