[package]
name = "kvs"
version = "0.1.0"
authors=["Gagan Yarramsetty"]
description="A key-value store"
edition = "2024"



[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile="3.0.7"
walkdir ="2.2.7"
[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
